tests/ui/compile-fail/init/tuple_constructor_cfg_non_last.stderr
error: `#[cfg]` is not supported in tuple constructor syntax
 --> tests/ui/compile-fail/init/tuple_constructor_cfg_non_last.rs:8:9
  |
8 |         #[cfg(any())]
  |         ^^^^^^^^^^^^^
